# onvif-camera-driver

./: .gitignore  Cargo.toml  MAKE87.yml  README.md  pyproject.toml
app/: main.py
src/: main.rs
